--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="error_lists_fetching">There was an error fetching the shopping lists</string>
+    <string name="hint_add_new_item">Add a new item</string>
 </resources>
